Add service metadata endpoints (#69)
