# pkg/api/registry/v1/zz_generated.deepcopy.go
@@ -62,6 +62,21 @@ func (in *AllowedOnboardingTeam) DeepCopy() *AllowedOnboardingTeam {
 }
 
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *Capacity) DeepCopyInto(out *Capacity) {
+	*out = *in
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new Capacity.
+func (in *Capacity) DeepCopy() *Capacity {
+	if in == nil {
+		return nil
+	}
+	out := new(Capacity)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *Cluster) DeepCopyInto(out *Cluster) {
 	*out = *in
 	out.TypeMeta = in.TypeMeta
@@ -171,6 +186,34 @@ func (in *ClusterSpec) DeepCopyInto(out *ClusterSpec) {
 			(*out)[key] = val
 		}
 	}
+	out.Capacity = in.Capacity
+	if in.ServiceMetadata != nil {
+		in, out := &in.ServiceMetadata, &out.ServiceMetadata
+		*out = make(ServiceMetadata, len(*in))
+		for key, val := range *in {
+			var outVal map[string]ServiceMetadataMap
+			if val == nil {
+				(*out)[key] = nil
+			} else {
+				in, out := &val, &outVal
+				*out = make(ServiceMetadataItem, len(*in))
+				for key, val := range *in {
+					var outVal map[string]string
+					if val == nil {
+						(*out)[key] = nil
+					} else {
+						in, out := &val, &outVal
+						*out = make(ServiceMetadataMap, len(*in))
+						for key, val := range *in {
+							(*out)[key] = val
+						}
+					}
+					(*out)[key] = outVal
+				}
+			}
+			(*out)[key] = outVal
+		}
+	}
 }
 
 // DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new ClusterSpec.
@@ -224,17 +267,16 @@ func (in *Extra) DeepCopyInto(out *Extra) {
 	if in.EcrIamArns != nil {
 		in, out := &in.EcrIamArns, &out.EcrIamArns
 		*out = make(map[string][]string, len(*in))
-		for i := range *in {
+		for key, val := range *in {
 			var outVal []string
-			if (*in)[i] == nil {
-				(*out)[i] = nil
+			if val == nil {
+				(*out)[key] = nil
 			} else {
-				val := (*in)[i]
 				in, out := &val, &outVal
 				*out = make([]string, len(*in))
 				copy(*out, *in)
 			}
-			(*out)[i] = outVal
+			(*out)[key] = outVal
 		}
 	}
 	if in.NFSInfo != nil {
@@ -295,6 +337,99 @@ func (in *PeerVirtualNetwork) DeepCopy() *PeerVirtualNetwork {
 	out := new(PeerVirtualNetwork)
 	in.DeepCopyInto(out)
 	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in ServiceMetadata) DeepCopyInto(out *ServiceMetadata) {
+	{
+		in := &in
+		*out = make(ServiceMetadata, len(*in))
+		for key, val := range *in {
+			var outVal map[string]ServiceMetadataMap
+			if val == nil {
+				(*out)[key] = nil
+			} else {
+				in, out := &val, &outVal
+				*out = make(ServiceMetadataItem, len(*in))
+				for key, val := range *in {
+					var outVal map[string]string
+					if val == nil {
+						(*out)[key] = nil
+					} else {
+						in, out := &val, &outVal
+						*out = make(ServiceMetadataMap, len(*in))
+						for key, val := range *in {
+							(*out)[key] = val
+						}
+					}
+					(*out)[key] = outVal
+				}
+			}
+			(*out)[key] = outVal
+		}
+	}
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new ServiceMetadata.
+func (in ServiceMetadata) DeepCopy() ServiceMetadata {
+	if in == nil {
+		return nil
+	}
+	out := new(ServiceMetadata)
+	in.DeepCopyInto(out)
+	return *out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in ServiceMetadataItem) DeepCopyInto(out *ServiceMetadataItem) {
+	{
+		in := &in
+		*out = make(ServiceMetadataItem, len(*in))
+		for key, val := range *in {
+			var outVal map[string]string
+			if val == nil {
+				(*out)[key] = nil
+			} else {
+				in, out := &val, &outVal
+				*out = make(ServiceMetadataMap, len(*in))
+				for key, val := range *in {
+					(*out)[key] = val
+				}
+			}
+			(*out)[key] = outVal
+		}
+	}
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new ServiceMetadataItem.
+func (in ServiceMetadataItem) DeepCopy() ServiceMetadataItem {
+	if in == nil {
+		return nil
+	}
+	out := new(ServiceMetadataItem)
+	in.DeepCopyInto(out)
+	return *out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in ServiceMetadataMap) DeepCopyInto(out *ServiceMetadataMap) {
+	{
+		in := &in
+		*out = make(ServiceMetadataMap, len(*in))
+		for key, val := range *in {
+			(*out)[key] = val
+		}
+	}
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new ServiceMetadataMap.
+func (in ServiceMetadataMap) DeepCopy() ServiceMetadataMap {
+	if in == nil {
+		return nil
+	}
+	out := new(ServiceMetadataMap)
+	in.DeepCopyInto(out)
+	return *out
 }
 
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
